# opentelemetry-python-distro

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pytest.ini  requirements.txt  setup.cfg  setup.py
.archive/: version-testing-fastapi.yml  version-testing-motor.yml  version-testing-pika.yml
.circleci/: config.yml
.github/workflows/: auto-merge.yml  github-actions.yml  nightly-actions.yml  push-actions.yml  run-integration-tests.yml  version-testing-boto3-sqs.yml  version-testing-boto3.yml  version-testing-django.yml  version-testing-fastapi-uvicorn.yml  version-testing-fastapi.yml  version-testing-flask.yml  version-testing-grpcio.yml  version-testing-kafka-python.yml  version-testing-motor.yml  version-testing-pika.yml  version-testing-psycopg.yml  version-testing-psycopg2.yml  version-testing-pymongo.yml  version-testing-pymysql.yml  version-testing-redis.yml  version-testing-test.yml  version-testing.yml
scripts/: add_new_supported_versions.sh  bd_to_prod.sh  checks.sh  ci_deploy.sh  delete_old_version_testing_branches.sh  deploy.sh  describe_supported_versions_diff.sh  gather_version_artifacts.py  init_tested_versions.sh  push_versions_branch.sh  reset_venv.sh  update_supported_packages_documentation.py
src/ci/: tested_versions_utils.py
src/lumigo_opentelemetry/: __init__.py
src/lumigo_opentelemetry/dependencies/: __init__.py
src/lumigo_opentelemetry/instrumentations/: __init__.py  (+2 more)
src/lumigo_wrapper/: __init__.py  lumigo_utils.py  wrapper.py
src/test/: conftest.py
versions_artifacts/3.8/: boto3
(+371 files in other folders)
