[metadata]
name = lumigo_opentelemetry
author = Lumigo LTD (https://lumigo.io)
author_email = support@lumigo.io
description = Lumigo OpenTelemetry Distribution for Python
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lumigo-io/opentelemetry-python-distro
project_urls =
    Bug Tracker = https://github.com/lumigo-io/opentelemetry-python-distro/issues
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src